--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>The Hangman Game</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="{{rootURL}}assets/favicon.ico"/>
 
     {{content-for "head"}}
 
